--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Comic Neue', cursive;
+  background: linear-gradient(0deg, rgba(140,140,140,1) 0%, rgba(89,87,87,1) 53%, rgba(0,0,0,1) 96%);
+  color: rgb(211, 208, 208);
+}
+
 .App {
   text-align: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  width: 400px;
+  margin: 20px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.info h1 {
+  font-size: 60px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.info-planet {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  margin: 30px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.info-planet h3 p {
+  padding: 0 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cards {
+  margin: 20px;
+}
+
+.cards img {
+  width: 200px;
+}
+
+.cards h4 p {
+  padding: 400px 0;
 }
